--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 
-<form method="post" action="http://192.168.1.6/ma/server.php">
+<form method="post" action="server.php">
 
 <input name="input1" type="text" />
 <button type="submit">submit</button>
