--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
-
+<head>
+<title>asd</title>
+</head>
+<body>
 <form method="post" action="server.php">
 
 <input name="input1" type="text" />
 <button type="submit">submit</button>
 </form>
-
+</body>
 
 </html>
